src/test/ui/pub/pub-ident-fn-or-struct-2.stderr
error: missing `fn` or `struct` for function or struct definition
  --> $DIR/pub-ident-fn-or-struct-2.rs:1:4
   |
LL | pub S();
   | ---^- help: if you meant to call a macro, try: `S!`

error: aborting due to previous error

