src/test/ui/pub/pub-ident-fn-or-struct-2.rs
pub S();
//~^ ERROR missing `fn` or `struct` for function or struct definition

fn main() {}
